# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
gendiff/: gendiff.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: answer
